--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -119,42 +119,29 @@
 
     <p class="mt-3 sub-stuff">
       <i>
-        <q>Education is the most powerful weapon which you can use to change the world.</q> <br>
+        <q>Education is the most powerful weapon which you can use to change the world.</q> <br></i>
         - Nelson Mandela
-      </i>
+  
     </p>
 
-    <p class="mt-5 sub-stuff">The dynamic field of synthetic biology is an amalgamation of science and engineering which
-      holds the potential for game-changing innovation and discovery. However, the general population is frequently
-      ignorant of its profound impact because of ethical misconceptions and a lack of social awareness.<br>
-      <br>
-      In India, a developing country, encouraging the fast-paced development of synthetic biology presents unique
-      difficulties, such as language limitations and a very diversified educational environment. These challenges
-      emphasize the critical value of all-encompassing education and awareness programs.<br>
-      <br>
-      At MIT-MAHE, we have embarked on a mission to bridge this knowledge gap by creating educational content tailored
-      to diverse audiences, from primary school students to working professionals. Our goal goes beyond expanding their
-      understanding of synthetic biology; it encompasses illuminating potential career paths and debunking
-      misconceptions , especially regarding genetically modified organisms (GMOs).<br>
-      <br>
-      The success of our project depends heavily on our educational outreach. We aim to fight the stigma and false
-      information surrounding GMOs by developing a concrete understanding of the biology of wastewater management and
-      the usage of antimicrobials like triclocarban in everyday life. Due to this knowledge, the public and other
-      stakeholders are better equipped to generate educated judgments, which ultimately helps projects improve and
-      ensures safety by encouraging constructive criticism.<br>
-      <br>
-      We aspire to foster mutual learning and dialogue, laying the foundation for active participation in shaping the
-      future of synthetic biology through our workshops, age-appropriate presentations, social media, comic strips,
-      activity booklet, blog, online talks and handbook. Education is our mission's bedrock, unlocking synthetic
-      biology's transformative potential to address critical societal and environmental challenges.
+    <p class="mt-5 sub-stuff">The dynamic field of synthetic biology is an amalgamation of science and engineering which holds the potential for game-changing innovation and discovery. However, the general population is frequently ignorant of its profound impact because of ethical misconceptions and a lack of social awareness.<br>
+<br>
+In India, a developing country, encouraging the fast-paced development of synthetic biology presents unique difficulties, such as <b>language limitations</b> and a very <b>diversified educational environment</b>. These challenges emphasize the critical value of all-encompassing education and awareness programs.<br>
+<br>
+At MIT-MAHE, we have embarked on a mission to bridge this knowledge gap by creating educational content tailored to diverse audiences, from primary school students to working professionals. Our goal goes beyond expanding their understanding of synthetic biology; it encompasses <b>potential career paths and debunking misconceptions</b>, especially regarding genetically modified organisms (GMOs).<br>
+<br>
+The success of our project depends heavily on our educational outreach. We aim to fight the stigma and <b>false information surrounding GMOs</b> by developing a concrete understanding of the biology of wastewater management and the usage of  antimicrobials like triclocarban in everyday life. Due to this knowledge, the public and other stakeholders are better equipped to generate educated judgments, which ultimately helps projects improve and ensures safety by encouraging constructive criticism.<br>
+<br>
+We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation for active participation in shaping the future of synthetic biology through our workshops, age-appropriate presentations, social media, comic strips, activity booklet, blog, online talks and handbook. Education is our mission's bedrock, unlocking synthetic biology's transformative potential to address critical societal and environmental challenges.
+
     </p>
 
     <img src="https://static.igem.wiki/teams/4641/wiki/education/mind-map-education.png"
       class="img-fluid rounded mx-auto d-block" style="scale:0.9;">
-    <p class="sub-stuff" style="text-align:center"> Codon Chart Activity conducted for High School students </p>
+    <p class="sub-stuff" style="text-align:center">Our Target Audience</p>
 
-    <p class="mt-5 sub-stuff">Our team members were able to visit nine schools across the states of Karnataka, Tamil
-      Nadu and Maharashtra.</p>
+    <p class="mt-5 sub-stuff">Our team members were able to visit nine schools across the states of <b>Karnataka, Tamil
+      Nadu and Maharashtra</b>.</p>
 
     <p class="mt-5 MAIN-STUFF" id="section2">Communicating Science to High School Students </p>
     <p class="mt-5 sub-stuff">
@@ -177,22 +164,25 @@
     <p class="mt-5 sub-stuff">
       Our primary aim with high school students was to teach them the basics of synthetic biology. We taught them
       concepts like the central dogma of life, applications of synthetic biology and genetic engineering principles.<br>
-      We were able to successfully conduct these sessions with the help of a few animations for easy understanding;<br>
+      We were able to successfully conduct these sessions with the help of a few <b>animations for easy understanding:</b><br>
     </p>
     <iframe title="MIT-MAHE: Central Dogma Animation for High School (2023) [English]" width="560" height="315"
       src="https://video.igem.org/videos/embed/180e1cc6-1334-472b-835a-1590e87452ba" frameborder="0" allowfullscreen=""
       sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
-
+    <p class="sub-stuff">Animation of the Central Dogma of Life</p>
     <p class="mt-5 sub-stuff">
-      We also conducted a Codon Chart Activity for students to understand the concept of translation better. We linked
+      We also conducted a <b>Codon Chart Activity</b> for students to understand the concept of translation better. We linked
       various amino acids to single alphabets and provided them with a code which spelt out an iconic phrase— <b><q>I AM
           BOND.</q></b> <br><br>
-      Our team members were able to visit several high schools across the states of India.<br>
     </p>
-
-    <img
+    
+    <img style="scale:0.75;"
       src="https://static.igem.wiki/teams/4641/wiki/education/codon-chart-activity-from-the-ppt-made-by-kini-for-reference.png"
       class="img-fluid rounded mx-auto d-block" style="scale:0.9;">
+      <p class="sub-stuff">Codon Chart Activity for High School Students</b>.</p>
+    
+    <p class="mt-5 sub-stuff">Our team members were able to visit nine schools across the states of <b>Karnataka, Tamil
+      Nadu and Maharashtra</b>.</p>
 
     <div class="accordion">
       <div class="accordion-item">
@@ -258,7 +248,7 @@
               how to utilize a Codon Chart to decipher the amino acid sequence encoded by an mRNA sequence.</p>
 
             <img
-              src="https://static.igem.wiki/teams/4641/wiki/education/gundecha-education-academy-mumbai-maharashtra.png"
+              src="https://static.igem.wiki/teams/4641/wiki/education/gundecha-education-academy-mumbai-maharashtra-real.png"
               class="img-fluid rounded mx-auto d-block" style="scale:0.7;">
 
           </div>
@@ -370,7 +360,7 @@
         <h2 class="accordion-header" id="headingSix">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-            <b>The Samhita Academy, Bangalore——Date: 12/07/2023 </b>
+            <b>The Samhita Academy, Bangalore—Date: 12/07/2023 </b>
           </button>
         </h2>
         <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix">
@@ -402,16 +392,16 @@
               experience. We interacted with 60 students from grades 8 and 9 despite initially planning a presentation
               designed for 11th and 12th graders. This presentation centered around synthetic biology and genetic
               engineering, had been well-received among older students in cities like Bangalore and Coimbatore.<br>
-              One of the primary challenges we encountered at Board High School was the language barrier. While the
+              One of the primary challenges we encountered at Board High School was the <b>language barrier</b>. While the
               school taught in both English and Kannada, the students primarily communicated in Kannada. To bridge this
-              gap, we sought assistance from teachers and used numerous examples to make the content more accessible. We
+              gap, <b>we sought assistance from teachers</b> and used numerous examples to make the content more accessible. We
               also explained amino acids using our music composition.
               Despite the language challenges, our visit proved to be fruitful. Some students showed genuine interest
               and asked questions about synthetic biology, indicating their curiosity and engagement with the topic. The
               highlight of our visit was the interactive activity we conducted. In this activity, students decoded an
               amino acid chain to reveal a secret message using a codon chart. This hands-on exercise was fun and highly
-              engaging, showcasing the effectiveness of our teaching approach. Importantly, every student successfully
-              decoded the message, demonstrating the effectiveness of our teaching methods.</p>
+              engaging and every student successfully
+              decoded the message, demonstrating the <b>effectiveness of our teaching methods</b>.</p>
             <figure>
               <div class="container">
                 <div class="row">
@@ -440,8 +430,8 @@
         </h2>
         <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight">
           <div class="accordion-body">
-            <p>Building on our experience from the visit to Board High School, we incorporated more hands-on and
-              interactive learning activities. Our team's visit to MJC School in Manipal was an enriching experience,
+            <p>Building on our experience from the visit to Board High School, we incorporated <b>more hands-on and
+              interactive learning activities</b>. Our team's visit to MJC School in Manipal was an enriching experience,
               where we engaged with 75 students using a revamped presentation that catered to their needs and
               preferences.<br>
               The new presentation strategy began with an extensive explanation of the cell, providing a solid
@@ -456,8 +446,8 @@
               reveal a secret message using a codon chart. This exercise sparked curiosity and led to a lively
               discussion, during which students asked numerous questions and sought clarification on various conceptual
               aspects.<br>
-              In conclusion, our educational visit to Board High School, followed by the visit to MJC School, helped us
-              reflect and modify our teaching methods to cater to different populations of students in order to make
+              In conclusion, our educational visit to Board High School, followed by the visit to MJC School, <b>helped us
+              reflect and modify our teaching methods</b> to cater to different populations of students in order to make
               synthetic biology more understandable.<br>
             </p>
             <img class="img-fluid rounded mx-auto d-block"
@@ -476,7 +466,7 @@
       encourages early engagement in environmental issues and lays a foundation for understanding its relevance to
       real-world challenges.</p>
 
-    <p class="mt-5 sub-stuff">Here is the content created by us on “Chemicals in Daily Use Products” for middle school
+    <p class="mt-5 sub-stuff">Here is the content created by us on <b>“Chemicals in Daily Use Products”</b> for middle school
       students:</p>
     <div class="ratio ratio-16x9 mt-5">
       <iframe src="https://static.igem.wiki/teams/4641/wiki/education/middle-school-ppt.pdf" allowfullscreen></iframe>
@@ -502,7 +492,7 @@
         <h2 class="accordion-header" id="headingNine">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine"
             aria-expanded="true" aria-controls="collapseNine">
-            <b>Prakriya International School </b> (5 July, 2023)
+            <b>Prakriya International School </b> (Date: 05/07/23)
           </button>
         </h2>
         <div id="collapseNine" class="accordion-collapse collapse show" aria-labelledby="headingNine">
@@ -580,11 +570,6 @@
                   <img
                     src="https://static.igem.wiki/teams/4641/wiki/education/sri-krishna-mandir-hulimavu-bangalore-1.png"
                     class="img-fluid mt-4" alt="Image 1">
-                </div>
-                <div class="col-md-6">
-                  <img
-                    src="https://static.igem.wiki/teams/4641/wiki/education/sri-krishna-mandir-hulimavu-bangalore-1.png"
-                    class="img-fluid mt-4" alt="Image 2">
                 </div>
               </div>
             </div>
@@ -882,7 +867,7 @@
             <p class="sub-stuff" style="text-align:center">summary of content taught at one of the sessions</p>
 
             <img class="img-fluid mt-3" style="scale:0.7"
-              src="https://static.igem.wiki/teams/4641/wiki/education/clipping-of-the-online-classroom-to-track-submissions-and-ensure-that-the-students-were-engaging-actively-in-a-two-way-dialogue.png">
+              src="https://static.igem.wiki/teams/4641/wiki/education/clipping-of-the-online-classroom-to-track-submissions-and-ensure-that-the-students-were-engaging-actively-in-a-two-way-dialogue.png"><br>
             <p class="sub-stuff" style="text-align:center">clipping of the online classroom to track submissions and
               ensure that the students were engaging actively in a two way dialogue</p>
           </div>
@@ -905,7 +890,7 @@
                 was a question session where doubts were cleared.</p>
               <img
                 src="https://static.igem.wiki/teams/4641/wiki/education/screenshot-from-the-webinar-with-olivia-gallup-on-computational-methods-in-synthetic-biology.png"
-                class="img-fluid mt-4 rounded mx-auto d-block">
+                class="img-fluid mt-4 rounded mx-auto d-block"><br>
 
               <p class="sub-stuff"> Webinar with Olivia Gallup on Computational Methods in Synthetic Biology </p>
 
