--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -525,7 +525,7 @@ The common assumption taken into consideration for determining kinetics is that 
                   where,
                   <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/eqn-37.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
                   <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/table-9.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
-                  <center><b>Growth kinetics for <i> Acinetobacter baylyi </i> </b><center><br>
+                  <center><b>Growth kinetics for <i> Acinetobacter baylyi </i> </b></center><br>
                   <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-32.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
                   <center><b>Fig:</b>Specific Growth Rate versus Substrate.</center>
                   <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
