Update engineering.html image

--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -107,9 +107,8 @@
               </h4>
               <div id="collapse2" class="accordion-collapse collapse show" aria-labelledby="heading2">
                 <div class="accordion-body">
-                  <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/model-which-was-used-for-this-predicted-by-alpha-fold-and-present-in-uniprot.png"style="scale:0.4;">
-                  <p class="sub-stuff" style="text-align:center;">
-                    <b>Fig 1:</b> Model which was used for this (predicted by Alpha Fold and present in UniProt)</p>
+                  <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/model-which-was-used-for-this-predicted-by-alpha-fold-and-present-in-uniprot.png">
+                    <center><b>Fig 1:</b> Model which was used for this (predicted by Alpha Fold and present in UniProt)</center>
                   <p class="sub-stuff">
                     We predicted structures by different softwares like SWISS-MODEL, Alphafold and iTASSER. For the test stage, we proceeded with the Alphafold model as it showed the highest percentage of residues lying within the accepted region of the Ramachandran plot.
                   </p>
@@ -122,7 +121,7 @@
             We performed docking studies with the predicted binding site. The docking results from Autodock Vina and SeamDock showed ΔG values of -7.51 kcal/mol and -4.7 kcal/mol respectively. This implies that TCC has a good affinity towards the TccA amidase protein. <br><br>
           </p>
           <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/2d-visualization-of-our-docked-structure-in-discovery-studio-visualizer-dsv.jpg"style="scale:0.4;">
-          <p class="sub-stuff" style="text-align:center;"><b>Fig 2:</b>2D visualization of our docked structure in Discovery Studio Visualizer (DSV)</p>
+          <center><b>Fig 2:</b>2D visualization of our docked structure in Discovery Studio Visualizer (DSV)</center>
           <p class="sub-stuff">
             These  ΔG values imply that there is a stable binding of TCC to the TccA amidase. This suggests that the predicted binding sites were correct.
           </p>
