--- a/wiki/pages/notebook.html
+++ b/wiki/pages/notebook.html
@@ -7,7 +7,7 @@
 <div class="content">
   <div class="m-5 mb-16">
     <p class="mt-5 MAIN-STUFF" id="section1">Growth Curve<br></p>
-    <button class="modal-button" onclick="openModal('modal1')">WEEK 1</button>
+    <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal1')">WEEK 1</button>
     <div id="modal1" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal1')">&times;</span>
@@ -269,7 +269,7 @@
             putida</i>.</center>
       </div>
     </div>
-    <button class="modal-button" onclick="openModal('modal2')">WEEK 2</button>
+    <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal2')">WEEK 2</button>
     <div id="modal2" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal2')">&times;</span>
@@ -723,7 +723,7 @@
 
 
 
-    <button class="modal-button" onclick="openModal('modal3')">WEEK 3</button>
+    <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal3')">WEEK 3</button>
     <div id="modal3" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal3')">&times;</span>
@@ -1377,7 +1377,7 @@
 
 
 
-    <button class="modal-button" onclick="openModal('modal4')">WEEK 4</button>
+    <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal4')">WEEK 4</button>
     <div id="modal4" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal4')">&times;</span>
@@ -2355,7 +2355,7 @@
 
 
 
-    <button class="modal-button" onclick="openModal('modal5')">WEEK 5</button>
+    <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal5')">WEEK 5</button>
     <div id="modal5" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal5')">&times;</span>
@@ -2737,7 +2737,7 @@
 
 
 
-    <button class="modal-button" onclick="openModal('modal6')">WEEK 6</button>
+    <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal6')">WEEK 6</button>
     <div id="modal6" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal6')">&times;</span>
@@ -3239,7 +3239,7 @@
 
 
 
-    <button class="modal-button" onclick="openModal('modal7')">WEEK 7</button>
+    <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal7')">WEEK 7</button>
     <div id="modal7" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal7')">&times;</span>
@@ -3391,7 +3391,7 @@
         <hr>
       </div>
     </div>
-    <button class="modal-button" onclick="openModal('modal8')">WEEK 8</button>
+    <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal8')">WEEK 8</button>
     <div id="modal8" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal8')">&times;</span>
@@ -3605,7 +3605,7 @@
     <div class="content">
       <div class="m-5 mb-16">
         <p class="mt-5 MAIN-STUFF" id="section1">Cloning and Expression<br></p>
-        <button class="modal-button" onclick="openModal('modalone')">WEEK 1</button>
+        <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modalone')">WEEK 1</button>
         <div id="modalone" class="modal">
           <div class="modal-content">
             <span class="close" onclick="closeModal('modalone')">&times;</span>
@@ -4114,7 +4114,7 @@
             <hr>
           </div>
         </div>
-        <button class="modal-button" onclick="openModal('modaltwo')">WEEK 2</button>
+        <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modaltwo')">WEEK 2</button>
         <div id="modaltwo" class="modal">
           <div class="modal-content">
             <span class="close" onclick="closeModal('modaltwo')">&times;</span>
@@ -4227,7 +4227,7 @@
             <hr>
           </div>
         </div>
-        <button class="modal-button" onclick="openModal('modalthree')">WEEK 3</button>
+        <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modalthree')">WEEK 3</button>
         <div id="modalthree" class="modal">
           <div class="modal-content">
             <span class="close" onclick="closeModal('modalthree')">&times;</span>
@@ -4666,7 +4666,7 @@
 
           </div>
         </div>
-        <button class="modal-button" onclick="openModal('modalfour')">WEEK 4</button>
+        <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modalfour')">WEEK 4</button>
         <div id="modalfour" class="modal">
           <div class="modal-content">
             <span class="close" onclick="closeModal('modalfour')">&times;</span>
@@ -5170,7 +5170,7 @@
         <div class="content">
           <div class="m-5 mb-16">
             <p class="mt-5 MAIN-STUFF" id="section1">Detection<br></p>
-            <button class="modal-button" onclick="openModal('modal11')">WEEK 1</button>
+            <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal11')">WEEK 1</button>
             <div id="modal11" class="modal">
               <div class="modal-content">
                 <span class="close" onclick="closeModal('modal11')">&times;</span>
@@ -5399,7 +5399,7 @@
                   <h2>
               </div>
             </div>
-            <button class="modal-button" onclick="openModal('modal12')">WEEK 2</button>
+            <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal12')">WEEK 2</button>
             <div id="modal12" class="modal">
               <div class="modal-content">
                 <span class="close" onclick="closeModal('modal12')">&times;</span>
@@ -5831,7 +5831,7 @@
                   <h2>
               </div>
             </div>
-            <button class="modal-button" onclick="openModal('modal13')">WEEK 3</button>
+            <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal13')">WEEK 3</button>
             <div id="modal13" class="modal">
               <div class="modal-content">
                 <span class="close" onclick="closeModal('modal13')">&times;</span>
@@ -5906,7 +5906,7 @@
 
               </div>
             </div>
-            <button class="modal-button" onclick="openModal('modal14')">WEEK 4</button>
+            <button style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="modal-button" onclick="openModal('modal14')">WEEK 4</button>
             <div id="modal14" class="modal">
               <div class="modal-content">
                 <span class="close" onclick="closeModal('modal14')">&times;</span>
