--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -60,8 +60,8 @@ Further, we believe that this will be a good starting point for other iGEM teams
 
 
 <p class="mt-5 MAIN-STUFF" id="section2"> Bioremediation Airtable </p>
-<p class="mt-5 sub-stuff"> Bioremediation is a newly introduced track in iGEM 2023. Before this, Bioremediation based projects majorly fell under the Environment Track, a vast track, which includes a multitude of projects. The members of iGEM MIT-MAHE have made an effort to compile all previous year bioremediation based projects as an airtable. The table was inspired by the Phoenix project and we believe it would be a resource for future teams to refer to and draw inspiration from. </p>
-
+<p class="mt-5 sub-stuff"> Bioremediation is a newly introduced track in iGEM 2023. Before this, Bioremediation based projects majorly fell under the Environment Track, a vast track, which includes a multitude of projects. The members of iGEM MIT-MAHE have made an effort to compile all previous year bioremediation based projects as an airtable. The table was inspired by the Phoenix project and we believe it would be a resource for future teams to refer to and draw inspiration from.<br><br>Click here to access the <a href="https://airtable.com/app3BRSug6bFUCrVi/tblC97SBfyP2r1Wyy/viwhVBKkV4u8e0zy7?blocks=hide">Bioremediation Airtable</a> </p>
+<br>
 <p class="mt-5 MAIN-STUFF" id="section3"> Bioreactor Handbook—A Beginner’s Guide</p>
 <p class="mt-5 sub-stuff"> A major part of our project involves designing a bioreactor as a part of our implementation. Our team has designed a packed bed bioreactor to effectively degrade TCC into non-toxic products using our modified bacteria. 
 Designing a bioreactor can be quite daunting, considering the huge number of factors that need to be taken into consideration. However, with strong basic principles in place, a viable bioreactor can be designed and then further optimised. To assist future iGEM teams with this, we have designed a bioreactor handbook to refer to when dealing with designing bioreactors. </p>
