--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -1322,7 +1322,11 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseTwentyEight" aria-expanded="false" aria-controls="collapseTwentyEight">
             <b>"Unlocking Clarity: A Comprehensive Guide to Water Pollution, Micropollutants, and Sustainable
-              Solutions"</b>
+              Solutions"</b><br><br>
+              <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/unlocking-clarity-handbook.pdf"
+                allowfullscreen></iframe>
+            </div>
           </button>
         </h2>
         <div id="collapseTwentyEight" class="accordion-collapse collapse" aria-labelledby="headingTwentyEight">
@@ -1453,15 +1457,15 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
               style="scale:0.50;">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-2.png"
+            <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-2.jpg"
               style="scale:0.50;">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-3.png"
+            <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-3.jpg"
               style="scale:0.50;">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-4.png"
+            <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-4.jpg"
               style="scale:0.50;">
           </div>
           <div class="carousel-item">
@@ -1473,7 +1477,7 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
               style="scale:0.50;">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-7.png"
+            <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-7.jpeg"
               style="scale:0.50;">
           </div>
         </div>
