Uploaded growth model pdf.html

--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -394,6 +394,10 @@ As shown in <b>Fig 21</b>, the radius of gyration (Rg) fluctuates between 2.15 a
        </p>     
     </p>
     <p class="mt-5 MAIN-STUFF" id="section9"><br>Growth Modeling</p>
+    <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/model-dl/growth-models-dl.pdf"
+                allowfullscreen></iframe>
+            </div>
     <p class="mt-5 MAIN-STUFF" id="section10"><br>Enzyme Kinetics</p>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
     <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-23.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
