--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -79,7 +79,7 @@
     {% block heading %}Human Practices{% endblock %}
 
     {% block page_content %}
-    <p class="mt-5 MAIN-STUFF" id="#section1"> Introducing Our Human Practices Approach: The IMPACT Framework </p>
+    <p class="mt-5 MAIN-STUFF" id="section1"> Introducing Our Human Practices Approach: The IMPACT Framework </p>
 
     <p class="mt-5 sub-stuff">In our iGEM journey, we have adopted the <b>"IMPACT Framework"</b> as the guiding
       philosophy for our Human Practices endeavors. This holistic framework, rooted in the principles of Ideation,
@@ -148,7 +148,7 @@
 
     </p>
 
-    <p class="mt-5 MAIN-STUFF" id="#section2">
+    <p class="mt-5 MAIN-STUFF" id="section2">
       Sustainable Development Goals
     </p>
 
@@ -187,7 +187,7 @@
         reach to the community throughout our project <b>(Goal 17-Partnership For Goals)</b>.</li>
     </ul>
 
-    <p class="mt-5 MAIN-STUFF" id="#section3">
+    <p class="mt-5 MAIN-STUFF" id="section3">
       Stakeholder Approach
     </p>
 
@@ -202,7 +202,7 @@
     <p class="mt-5 MAIN-STUFF">Stakeholder-Specific SWOT Analysis</p>
 
 
-    <p class="mt-5 MAIN-STUFF" id="#section4">Integrated Human Procesess</p>
+    <p class="mt-5 MAIN-STUFF" id="section4">Integrated Human Procesess</p>
     <p class="sub-stuff">Instead of creating a general SWOT analysis for our project we conducted a SWOT analysis for
       each of our five stakeholder categories. A generalized stakeholder analysis would have given us a breakdown of who
       our stakeholders are. However, since we had already identified our stakeholders, we used this categorized SWOT
@@ -1881,7 +1881,7 @@
       </div>
     </div>
 
-    <p class="mt-5 MAIN-STUFF" id="#section5">Surveys</p>
+    <p class="mt-5 MAIN-STUFF" id="section5">Surveys</p>
 
     <p class="mt-5 sub-stuff"><b>1. Analyzing and understanding scientific awareness without the bias of age and
         profession: </b><br></p>
@@ -1929,7 +1929,7 @@
         allowfullscreen></iframe>
     </div>
 
-    <p class="mt-5 MAIN-STUFF" id="#section6">How our discussions lead to the Final Implementation</p>
+    <p class="mt-5 MAIN-STUFF" id="section6">How our discussions lead to the Final Implementation</p>
 
     <p class="mt-5 sub-stuff"><b>Proposed Implementation</b></p>
 
@@ -1988,7 +1988,7 @@
       To know further details about our implementation, <a
         href="https://2023.igem.wiki/mit-mahe/project-implementation">click here</a>.
     </p>
-    <p class="mt-5 MAIN-STUFF" id="#section7">References:</p>
+    <p class="mt-5 MAIN-STUFF" id="section7">References:</p>
     Samaga, P. (2021, January 29). Toxic cocktail of chemicals discharged into Indrani River making life miserable for
     locals. The New Indian Express. <a
       href="https://www.newindianexpress.com/states/karnataka/2021/jan/29/toxic-cocktail-of-chemicals-discharged-into-indrani-river-making-life-miserable-for-locals-2256670.html">https://www.newindianexpress.com/states/karnataka/2021/jan/29/toxic-cocktail-of-chemicals-discharged-into-indrani-river-making-life-miserable-for-locals-2256670.html</a>
